--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
       <div class="auth-container">
         <div class="auth-card">
           <div class="app-logo">
-            <img src="creatore.png" alt="loading..." style="width: 60px" />
+            <img
+              src="creatore.png"
+              alt="loading..."
+              style="width: 60px"
+            />
             <span>Creator Flow</span>
           </div>
           <h2>Welcome Back</h2>
@@ -1138,4 +1142,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
